syntax = "proto3";

package telemetry.message.event;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

// данные события, связанного с хабом
message HubEventProto {
  string hub_id = 1; // идентификатор хаба
  google.protobuf.Timestamp timestamp = 2;
  oneof payload { // содержимое конкретного события
    DeviceAddedEventProto device_added = 3;
    DeviceRemovedEventProto device_removed = 4;
    ScenarioAddedEventProto scenario_added = 5;
    ScenarioRemovedEventProto scenario_removed = 6;
  }
}

// событие добавления устройства в хаб
message DeviceAddedEventProto {
  string id = 1; // идентификатор устройства
  DeviceTypeProto type = 2; // тип устройства
}

enum DeviceTypeProto {
  MOTION_SENSOR = 0;      // датчик движения
  TEMPERATURE_SENSOR = 1; // датчик температуры
  LIGHT_SENSOR = 2;       // датчик освещённости
  CLIMATE_SENSOR = 3;     // датчик контроля климата
  SWITCH_SENSOR = 4;      // переключатель
}

// событие удаления устройства из хаба
message DeviceRemovedEventProto {
  string id = 1; // идентификатор устройства
}

// событие добавления сценария
message ScenarioAddedEventProto {
  string id = 1; // уникальное в рамках хаба название сценария
  repeated ScenarioConditionProto scenario_conditions = 2; // условия для активации сценария
  repeated DeviceActionProto scenario_actions = 3; // действия выполняемые в рамках сценария
}

// условие активации сценария
message ScenarioConditionProto {
  string sensor_id = 1;
  ConditionTypeProto type = 2;
  ConditionOperationProto operation = 3;
  oneof value {
    bool bool_value = 4;
    int32 int_value = 5;
  }
}

// типы условий для сценариев
enum ConditionTypeProto {
  MOTION = 0;
  LUMINOSITY = 1;
  SWITCH = 2;
  TEMPERATURE = 3;
  CO2LEVEL = 4;
  HUMIDITY = 5;
}

// операторы допустимые для построения условий
enum ConditionOperationProto {
  EQUALS = 0;
  GREATER_THAN = 1;
  LOWER_THAN = 2;
}

// действия выполняемые устройством в рамках сценария
message DeviceActionProto {
  string sensor_id = 1;
  ActionTypeProto type = 2;
  optional int32 value = 3;
}

// типы действий в рамках сценария
enum ActionTypeProto {
  ACTIVATE = 0;
  DEACTIVATE = 1;
  INVERSE = 2;
  SET_VALUE = 3;
}

// событие удаления сценария
message ScenarioRemovedEventProto {
  string id = 1; // уникальное в рамках хаба название сценария
}